--- a/pai/pom.xml
+++ b/pai/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<groupId>br.com.medflow</groupId>
-	<artifactId>medflow-core</artifactId>
+	<artifactId>medflow-pai</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<packaging>pom</packaging>
