[feature] Organize BDD tests for medical specialties
- Moved and structured .feature files and step definitions for specialties
- Ensured proper folder structure in the feature/bdd-especialidades module
- Prepared project for isolated BDD testing of specialty-related functionality

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
   <modules>
   	<module>pai</module>
   	<module>dominio-catalogo</module>
+    <module>medflow-bdd-especialidades</module>
+    <module>medflow-bdd-exames</module>
   </modules>
 
 </project>
