[feat] Refactor folder structure and merge feature files with step definitions
- Renamed and reorganized folders for better clarity and maintainability
- Combined related feature and step definition files into unified modules

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
   <modules>
   	<module>pai</module>
   	<module>dominio-catalogo</module>
+    <module>dominio-referencia</module>
+    <module>dominio-atendimento</module>
   </modules>
 
 </project>
