Adicionando testes BDD de Pacientes

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
   	<module>dominio-catalogo</module>
     <module>dominio-referencia</module>
     <module>dominio-atendimento</module>
+    <!--<module>medflow-core</module>-->  
+    <module>medflow-bdd-pacientes</module>
   </modules>
 
 </project>
