Alterações no pom.xml e arquivos de configuração

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   	<module>dominio-catalogo</module>
     <module>dominio-referencia</module>
     <module>dominio-atendimento</module>
+    <module>medflow-bdd-tipos-exames</module>
   </modules>
 
 </project>
