--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
-  <modules>
-  	<module>pai</module>
-  	<module>dominio-catalogo</module>
-  </modules>
+	<modules>
+		<module>pai</module>
+		<module>dominio-catalogo</module>
+		<module>dominio-financeiro</module>
+	</modules>
 
 </project>
