metade dos testes

--- a/pai/pom.xml
+++ b/pai/pom.xml
@@ -78,4 +78,7 @@
 			</dependency>			
 		</dependencies>		
 	</dependencyManagement>
+	<modules>
+		<module>dominio-administracao</module>
+	</modules>
 </project>
