Adicionando testes de Tipos de Exame

--- a/dominio-referencia/src/test/resources/junit-platform.properties
+++ b/dominio-referencia/src/test/resources/junit-platform.properties
@@ -1,1 +1,1 @@
-cucumber.glue=br.com.medflow.dominio.referencia.especialidades
+cucumber.glue=br.com.medflow.dominio.referencia.especialidades,br.com.medflow.dominio.referencia.tiposExames.test
