--- a/dominio-referencia/pom.xml
+++ b/dominio-referencia/pom.xml
@@ -1,65 +1,93 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>br.com.medflow</groupId>
+        <artifactId>medflow-pai</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pai</relativePath>
+    </parent>
+
+    <artifactId>medflow-dominio-referencia</artifactId>
+    <packaging>jar</packaging>
+
+    <name>MedFlow Domínio - Referência</name>
+    <description>Domínio com funcionalidades de referência médica (Especialidades, Tipos de Exame, Medicamentos, etc.)</description>
 	
-	<parent>
-		<groupId>br.com.medflow</groupId>
-		<artifactId>medflow-pai</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	    <relativePath>../pai</relativePath>
-	</parent>
-
-	<artifactId>medflow-dominio-referencia</artifactId>
 	
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>io.cucumber</groupId>
-				<artifactId>cucumber-bom</artifactId>
-				<version>${cucumber.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>			
-		</dependencies>
-	</dependencyManagement>
+    <dependencies>
+    	<!-- 
+        Dependência do módulo core 
+        <dependency>
+            <groupId>br.com.medflow</groupId>
+            <artifactId>medflow-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>-->
 
-	<dependencies>
-		<!-- compile -->		
-		<dependency>
-		    <groupId>commons-validator</groupId>
-		    <artifactId>commons-validator</artifactId>
-		</dependency>
+        <!-- Dependências utilitárias -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        
+        </dependency>
 
-    	<!-- test -->
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-junit-platform-engine</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <!-- Dependências de teste -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.14.0</version>
+            <scope>test</scope>
+        </dependency>
 
-   		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+            <version>7.14.0</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-suite</artifactId>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-	        <groupId>org.apache.commons</groupId>
-	        <artifactId>commons-lang3</artifactId>
-    	</dependency>	
-	</dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
+                
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
+
