atualização nome do dominio

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   
   <modules>
   	<module>pai</module>
-  	<module>dominio-convenios</module>
+  	<module>dominio-financeiro</module>
   </modules>
 
 </project>
