--- a/dominio-financeiro/src/test/resources/junit-platform.properties
+++ b/dominio-financeiro/src/test/resources/junit-platform.properties
@@ -1,5 +1,2 @@
-<<<<<<< HEAD
 cucumber.glue=br.com.medflow.dominio.financeiro.convenios
-=======
-cucumber.publish.quiet=true
->>>>>>> realese/develop
+cucumber.glue=br.com.medflow.dominio.financeiro.faturamentos
