Adiciona estrutura de testes BDD para Pacientes no domínio Administração

--- a/dominio-administracao/src/test/resources/junit-platform.properties
+++ b/dominio-administracao/src/test/resources/junit-platform.properties
@@ -1,1 +1,1 @@
-cucumber.glue=br.com.medflow.dominio.administracao.funcionarios
+cucumber.glue=br.com.medflow.dominio.administracao.funcionarios, br.com.medflow.dominio.administracao.pacientes
