--- a/apresentacao-backend/pom.xml
+++ b/apresentacao-backend/pom.xml
@@ -61,7 +61,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>test</scope>
 		</dependency>
         
         <dependency>
@@ -72,35 +71,24 @@
 	</dependencies>
 	
 	<build>
-	    <plugins>
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-resources-plugin</artifactId>
-	            <configuration>
-	                <encoding>UTF-8</encoding>
-	            </configuration>
-	        </plugin>
-	        
-	        <plugin>
-	            <groupId>org.springframework.boot</groupId>
-	            <artifactId>spring-boot-maven-plugin</artifactId>
-	            <executions>
-	                <execution>
-	                    <goals>
-	                        <goal>repackage</goal>
-	                    </goals>
-	                </execution>
-	            </executions>
-	        </plugin>
-	        
-	        </plugins>
-	    
 	    <resources>
 	        <resource>
 	            <directory>src/main/resources</directory>
 	            <filtering>true</filtering>
+	            <excludes>
+	                <exclude>application-test.properties</exclude>
+	            </excludes>
+	        </resource>
+	        <resource>
+	            <directory>src/main/resources</directory>
+	            <filtering>false</filtering>
+	            <includes>
+	                <include>application-test.properties</include>
+	            </includes>
 	        </resource>
 	    </resources>
+	    <plugins>
+	        </plugins>
 	</build>
 
 </project>
