--- a/apresentacao-backend/src/main/resources/application.properties
+++ b/apresentacao-backend/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 # ----------------------------------------------------
-# 1. CONFIGURAÇÃO DE BANCO DE DADOS EM MEMÓRIA (H2)
+# 1. CONFIGURAï¿½ï¿½O DE BANCO DE DADOS EM MEMï¿½RIA (H2)
 # ----------------------------------------------------
 
-# O H2 é o banco embutido mais rápido, ideal para testes de integração e desenvolvimento local.
+# O H2 ï¿½ o banco embutido mais rï¿½pido, ideal para testes de integraï¿½ï¿½o e desenvolvimento local.
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:medflowdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=password
 
 # ----------------------------------------------------
-# 2. CONFIGURAÇÃO JPA/HIBERNATE
+# 2. CONFIGURAï¿½ï¿½O JPA/HIBERNATE
 # ----------------------------------------------------
 
-# Informa ao Hibernate que ele está rodando no H2
+# Informa ao Hibernate que ele estï¿½ rodando no H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# CRUCIAL: Diz ao Hibernate para NÃO criar as tabelas. 
-# Quem fará isso é o Flyway, que usará seus scripts V3__CATALOGO.sql.
+# CRUCIAL: Diz ao Hibernate para Nï¿½O criar as tabelas. 
+# Quem farï¿½ isso ï¿½ o Flyway, que usarï¿½ seus scripts V3__CATALOGO.sql.
 spring.jpa.hibernate.ddl-auto=none
 
 # ----------------------------------------------------
-# 3. CONFIGURAÇÃO FLYWAY
+# 3. CONFIGURAï¿½ï¿½O FLYWAY
 # ----------------------------------------------------
 
-# Garante que o Flyway será executado na inicialização, rodando suas migrações.
+# Garante que o Flyway serï¿½ executado na inicializaï¿½ï¿½o, rodando suas migraï¿½ï¿½es.
 spring.flyway.enabled=true
