--- a/dominio-financeiro/src/test/resources/junit-platform.properties
+++ b/dominio-financeiro/src/test/resources/junit-platform.properties
@@ -1,1 +1,1 @@
-cucumber.glue=br.com.medflow.dominio.financeiro.convenios, br.com.medflow.dominio.financeiro.faturamentos
+cucumber.glue=br.com.medflow.dominio.financeiro.convenios, br.com.medflow.dominio.financeiro.faturamentos, br.com.medflow.dominio.financeiro.folhapagamento
