--- a/aplicacao/pom.xml
+++ b/aplicacao/pom.xml
@@ -43,5 +43,23 @@
 			<artifactId>medflow-dominio-referencia</artifactId>
 			<version>${project.version}</version>
 		</dependency>	
+		
+		<!-- Spring Boot Starter -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+    
+    <!-- Apache Commons Lang (para validações) -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+    </dependency>
+    
+    <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-tx</artifactId>
+	</dependency>
+	
 	</dependencies>
 </project>
