fix: configura Java 17 e adiciona bean FolhaPagamentoServicoAplicacao
- Configura projeto para usar Java 17 (pai/pom.xml)
- Adiciona configuração headless no Spring Boot plugin
- Adiciona bean FolhaPagamentoServicoAplicacao no BackendAplicacao
- Cria script run.sh para facilitar execução
- Adiciona documentação de configuração Java 17
- Resolve problema do JavaFX com flag headless

--- a/apresentacao-backend/pom.xml
+++ b/apresentacao-backend/pom.xml
@@ -88,7 +88,16 @@
 	        </resource>
 	    </resources>
 	    <plugins>
-	        </plugins>
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	            <configuration>
+	                <jvmArguments>
+	                    -Djava.awt.headless=true
+	                </jvmArguments>
+	            </configuration>
+	        </plugin>
+	    </plugins>
 	</build>
 
 </project>
