--- a/pai/pom.xml
+++ b/pai/pom.xml
@@ -19,6 +19,9 @@
 
 	<properties>
 		<cucumber.version>7.21.1</cucumber.version>
+		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<build>
