--- a/apresentacao-backend/src/test/resources/application-desenvolvimento.properties
+++ b/apresentacao-backend/src/test/resources/application-desenvolvimento.properties
@@ -1,5 +1,5 @@
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=none
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
