--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>br.com.medflow</groupId>
-  <artifactId>medflow-modulos</artifactId>
+  <artifactId>ConsultaRepositorioImpl</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
   <packaging>pom</packaging>
